Further updates to get ready for adding a model and controller for each pane

--- a/app/frog_controller/index.html
+++ b/app/frog_controller/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Frog Controller - Background</title>
-    <script src="../steal/steal.js?pane/bootstrap.js"></script>
+    <script src="../steal/steal.js?frog_controller/core/bootstrap.js"></script>
 </head>
 <body>
 
