--- a/app/upgrade.html
+++ b/app/upgrade.html
@@ -15,8 +15,7 @@
         }
 
         iframe {
-            width: 100%;
-            height: 100%;
+            width: 100%; height: 100%; border: none;
         }
     </style>
 </head>
