--- a/app/upgrade.html
+++ b/app/upgrade.html
@@ -7,19 +7,28 @@
     <script src="../app/public/content-scripts/upgrade.js"></script>
     <style>
         .upgrade {
-            position: absolute; top: 0; left: 0; right: 0; bottom: 0;
+            position: absolute; top: 100px; left: 0; right: 0; bottom: 0;
         }
 
         .initial {
-            position: absolute; top: 0; left: 51%; right: 0; bottom: 0; display: none;
+            position: absolute; top: 100px; left: 50%; right: 0; bottom: 0; display: none;
         }
 
         iframe {
             width: 100%; height: 100%; border: none;
         }
+
+        .info {
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 100px;
+            left: 0;
+        }
     </style>
 </head>
 <body>
+    <div class="info"></div>
     <div class="upgrade"></div>
     <div class="initial"></div>
 </body>
